--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,10 @@
 }
 
 .App-header {
-  padding: 5px;
-  font-size: calc(15px + 1vmin)
+  padding: 10px;
+  font-size: calc(15px + 1vmin);
+  background-color: #38597b;
+  color: white
 }
 
 .App-logo {
