App.js: immagine

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
   padding: 10px;
   font-size: calc(15px + 1vmin);
   background-color: #38597b;
-  color: white
+  color: white;
+  margin: 0px
 }
 
 .App-logo {
@@ -43,3 +44,28 @@
     transform: rotate(360deg);
   }
 }
+
+.Container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+
+.Main {
+  display: flex;
+  flex: 1;
+}
+
+
+.Content {
+  flex: 1;
+  overflow: hidden;
+}
+
+.SeaImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
