--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,10 @@
   font-size: calc(15px + 1vmin);
   background-color: #38597b;
   color: white;
-  margin: 0px
+  margin: 0px;
+  text-decoration: none; /* niente sottolineatura */
+  cursor: pointer;      /* cambia il cursore al passaggio */
+  font-weight: bold;
 }
 
 .App-logo {
@@ -20,17 +23,6 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-/* .App-header {
-  background-color: white;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: left;
-  font-size: calc(10px + 1vmin);
-  color: black;
-} */
 
 .App-link {
   color: #61dafb;
