--- a/src/components/agGrid/grigliaStile.css
+++ b/src/components/agGrid/grigliaStile.css
@@ -1,7 +1,7 @@
 /* Contenitore della griglia */
 .griglia-container {
-  width: 80%;
-  margin: 40px auto;
+  width: 600px;
+  margin: 20px 0 20px 20px;
   height: 400px;
   border-radius: 12px;
   overflow: hidden;
