--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -3,7 +3,7 @@
   color: #e0e6f1;
   padding: 15px 10px;
   box-shadow: 3px 0 10px rgba(0,0,0,0.3);
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   justify-content: flex-start;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
